--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,15 @@ data-bin/
 # VSCODE
 .vscode/ftp-sync.json
 .vscode/settings.json
+.vscode/*
 
 # Experimental Folder
 experimental/*
+
+# last version files
+fast_knn_nmt/knn/cluster.py.old.equal
+fast_knn_nmt/knn/cluster.py.old.nowmt
+fast_knn_nmt/knn/find_knn_neighbors.py.train.tgt.cluster
+fast_knn_nmt/knn/get_tgt_cluster_and_distance.py
+fast_knn_nmt/knn/k_means.py
+fast_knn_nmt/knn/k_means.py.old
